tests/reference/asr-coarray_01-5f111e4.stderr
semantic error: Variable 's' is not a coarray; coindex notation [..] requires a codimension attribute
 --> tests/errors/coarray_01.f90:9:11
  |
9 |     s%x = s%x[1]
  |           ^^^^^^ 
